Completed controller. Need testing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   web_socket_channel: ^2.3.0
   http: ^0.13.5
   arrow_pad: ^0.1.5
+  network_info_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
