--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^0.13.5
   arrow_pad: ^0.1.5
   network_info_plus: ^3.0.2
+  flutter_joystick: ^0.0.3
+  syncfusion_flutter_sliders: ^20.4.53
 
 dev_dependencies:
   flutter_test:
